# lt_presentation

./: pyproject.toml
lt_presentation/: Counts.xlsx  MWLightning.pptx  main.py  multipleChoiceResponses2017.csv
lt_presentationt/: analyzer.py  main.py
